# laser_line_extraction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
.github/workflows/: noetic.yml
include/laser_line_extraction/: line.h  line_extraction.h  line_extraction_node.h  line_extraction_ros.h  utilities.h
laser_line_extraction/: CMakeLists.txt  package.xml
laser_line_extraction/include/laser_line_extraction/: line.h  line_extraction_ros.h  utilities.h
laser_line_extraction/src/: line.cpp  line_extraction.cpp  line_extraction_node.cpp  line_extraction_ros.cpp
laser_line_extraction_interfaces/: CMakeLists.txt  package.xml
laser_line_extraction_interfaces/msg/: LineSegment.msg  LineSegmentList.msg
launch/: debug.launch  example.launch  laser_line_extraction.launch  test.launch
msg/: LineSegment.msg  LineSegmentList.msg
scripts/: lle_node.py
src/: demo.py  line.cpp  line_extraction.cpp  line_extraction_main.cpp  line_extraction_node.cpp  line_extraction_ros.cpp
src/data/: laser_scan_1.json  laser_scan_2.json  laser_scan_5.json
src/laser_line_extraction/: config.py  extract_lines.py  line_extractor.py  line_tools.py
src/laser_line_extraction/data/: laser_scan_3.json  laser_scan_4.txt  laser_scan_6.json
test/: test_line_extaction.cpp
